--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainArea.HomeActivity"></activity>
+        <activity android:name=".Login.CouponRegisterActivity"></activity>
+        <activity android:name=".Login.ShopRegisterActivity" />
+        <activity android:name=".MainArea.HomeActivity" />
         <activity android:name=".Login.LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
