--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.remarksolutions">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -16,7 +18,8 @@
         <activity android:name=".MainArea.HomeFragment.HomeFrag" />
         <activity android:name=".Login.CouponRegisterActivity" />
         <activity android:name=".Login.ShopRegisterActivity" />
-        <activity android:name=".MainArea.HomeActivity" />
+        <activity android:name=".MainArea.HomeActivity"
+            android:theme="@style/AppTheme1"/>
         <activity android:name=".Login.LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
